# iced-audio-player

./: .gitignore  Cargo.toml  README.md
src/: audio.rs  audio_processor.rs  icon.rs  lib.rs  main.rs  message.rs  player.rs  scene.rs
src/scene/: renderer.rs  spectrometer.rs
src/scene/renderer/: spectrum.rs  vertex.rs
src/shaders/: spectrum.wgsl
src/widget/: button.rs
