[package]
name = "iced-audio-player"
version = "0.1.0"
authors = ["rejdeoer <rick.deboer@live.nl>"]
edition = "2021"

[dependencies]
iced = { features = ["wgpu", "debug"], git = "https://github.com/rejdeboer/iced" }
env_logger = "0.10"
log = "0.4"
bytemuck = "1.14.1"
glam = { features = ["bytemuck"], version = "0.25.0" }
rand = "0.8.5"
wgpu = "0.19.1"
dasp = { version = "0.11.0", features = ["ring_buffer", "signal"] }
cpal = "0.15.2"
rustfft = "6.1.0"
apodize = "1.0.0"
hound = "3.5.1"
