[package]
name = "iced-audio-player"
version = "0.1.0"
authors = ["rejdeoer <rick.deboer@live.nl>"]
edition = "2021"

[dependencies]
iced = { features = ["canvas", "wgpu", "debug"], git = "https://github.com/rejdeboer/iced" }
log = "0.4"
bytemuck = "1.14.1"
cpal = "0.15.2"
rustfft = "6.1.0"
apodize = "1.0.0"
hound = "3.5.1"
rtrb = "0.3.0"
